add navigation menu and section IDs for improved tutorial structure

--- a/tutorial.html
+++ b/tutorial.html
@@ -21,6 +21,14 @@
         </a>
     </header>
 
+    <nav class="nav">
+        <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="#intro">Intro</a></li>
+            <li class="nav__item"><a class="nav__link" href="#html">HTML</a></li>
+            <li class="nav__item"><a class="nav__link" href="#css">CSS</a></li>
+            <li class="nav__item"><a class="nav__link" href="#js">JavaScript</a></li>
+        </ul>
+
     <main class="tutorial">
         <section class="tutorial__intro">
             <div class="tutorial__content-wrapper">
@@ -40,7 +48,7 @@
             </figure>
             </div>
         </section>
-        <section class="tutorial__content">
+        <section class="tutorial__content" id="intro">
             <section class="step">
                  <h2 class="step__title">Stap 1: Mappenstructuur</h2>
                 <p class="step__text">Ga naar de officiële website van <a href="https://code.visualstudio.com/" target="_blank">Visual Studio Code.</a> Op de startpagina zie je meteen een knop om de versie te downloaden die geschikt is voor jouw besturingssysteem (Windows, macOS of Linux). Klik op de knop om het installatiebestand te downloaden. Zodra je dit hebt gedaan kunnen we aan de slag met programmeren!</p>
@@ -73,7 +81,7 @@
                     </p>
                 </div>
             </section>
-            <section class="step">
+            <section class="step" id="html">
                 <h2 class="step__title">Stap 2: HTML</h2>
                 <p class="step__text">HTML vormt de basis van je website. Het bepaalt de structuur en inhoud, zoals teksten, afbeeldingen en links. Pas daarna voeg je met CSS en JavaScript opmaak en gebruikersinteractie toe, zoals knoppen, formulieren en nog veel meer!</p>
                 <div class="step__content">
@@ -170,7 +178,7 @@
 
                 </div>
             </section>
-            <section class="step">
+            <section class="step" id="css">
                 <h2 class="step__title">Stap 3: CSS</h2>
                 <p class="step__text">CSS zorgt voor de vormgeving en stijl van je website. In deze taal spreken we elementen uit het index.html bestand aan 
                     en geven we ze bapaalde eigenschappen zoals groottes, kleuren, positionering en font-stijlen</p>
@@ -311,7 +319,7 @@
                     </p>
                 </div>
             </section>
-            <section class="step">
+            <section class="step" id="js">
                 <h2 class="step__title">Stap 4: JavaScript</h2>
                 <p class="step__text">JavaScript geeft functionaliteit aan het spel. Enkele basistermen van JavaScript:</p>
                 <ul class="tutorial__list tutorial__list--terms">
