--- a/tutorial.html
+++ b/tutorial.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./src/assets/favicon.png">
     <title>Tutorial | Kennis Race</title>
 
     <link rel="stylesheet" href="./src/styles/main.css">
