updated copy code style

--- a/tutorial.html
+++ b/tutorial.html
@@ -89,7 +89,7 @@
                     <h3 class="step__subtitle">2.1 Code index.html</h3>
                     <p class="step__item">
                         Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
-                        <pre><button class="step__copy" id="copy1">Copy</button><div class="code__header"></div>
+                        <pre><button class="step__copy" id="copy1">Copy</button>
     <code id="code1">&lt;<span class="tag">!DOCTYPE </span><span class="attr">html</span>&gt;
 &lt;<span class="tag">html</span> <span class="attr">lang</span>=<span class="string">&quot;en&quot;</span>&gt;
 
