updated copy button

--- a/tutorial.html
+++ b/tutorial.html
@@ -24,10 +24,10 @@
 
     <nav class="nav">
         <ul class="nav__list">
-            <li class="nav__item"><a class="nav__link" href="#intro">Intro</a></li>
-            <li class="nav__item"><a class="nav__link" href="#html">HTML</a></li>
-            <li class="nav__item"><a class="nav__link" href="#css">CSS</a></li>
-            <li class="nav__item"><a class="nav__link" href="#js">JavaScript</a></li>
+            <li class="nav__item"><a class="nav__link" href="#intro">1. Intro</a></li>
+            <li class="nav__item"><a class="nav__link" href="#html">2. HTML</a></li>
+            <li class="nav__item"><a class="nav__link" href="#css">3. CSS</a></li>
+            <li class="nav__item"><a class="nav__link" href="#js">4. JavaScript</a></li>
         </ul>
 
     <main class="tutorial">
@@ -89,7 +89,7 @@
                     <h3 class="step__subtitle">2.1 Code index.html</h3>
                     <p class="step__item">
                         Kopieer onderstaande code in het <span class="tutorial__highlight">index.html</span> bestand. Dit is de basis stuctuur van een webpagina.
-                        <pre><button class="step__copy" id="copy1">Copy</button>
+                        <pre><button class="step__copy" id="copy1">Copy</button>x`
     <code id="code1">&lt;<span class="tag">!DOCTYPE </span><span class="attr">html</span>&gt;
 &lt;<span class="tag">html</span> <span class="attr">lang</span>=<span class="string">&quot;en&quot;</span>&gt;
 
@@ -535,12 +535,12 @@
     <span class="selector">playerWins</span>(<span class="value">2</span>);
 }
 </code></pre>
-
                     </p>
                 </div>
             </section>
 
-            <p class="tutorial__text tutorial__text--intro">Klaar! Nu zou je een werkende 1-tegen-1 quiz minigame moeten hebben. Je kan makkelijk je eigen vragen toevoegen in het questions.js bestand</p>
+            <p class="tutorial__text tutorial__text--intro">Klaar! Nu heb je een werkende 1-tegen-1 quiz minigame moeten hebben. Je kan makkelijk je eigen vragen toevoegen in het questions.js bestand</p>
+            <img class="tutorial__image tutorial__image--hero" alt="Screenshot van Kennis Race" src="./src/assets/screenshot1.png">
         </section>
     </main>
     
