fixed tutorial bug

--- a/tutorial.html
+++ b/tutorial.html
@@ -67,7 +67,7 @@
                     <h3 class="step__subtitle">1.3 folderstructuur</h3>
                     <p class="step__item">
                         Maak de mappen <span class="tutorial__highlight">css</span>, <span class="tutorial__highlight">data</span> en <span class="tutorial__highlight">scripts</span>, en de bestanden <span class="tutorial__highlight">main.css</span>, <span class="tutorial__highlight">app.js</span> en <span class="tutorial__highlight">index.html</span>.<br>
-                        De map- en bestandsstructuur ziet er zo uit:
+                        Gebruik de knoppen bovenaan in de explorer. De map- en bestandsstructuur ziet er zo uit:
                         <img class="tutorial__image" alt="Maak map- en bestandsstructuur" src="./src/assets/screenshot4.png">
                     </p>
                     <h3 class="step__subtitle">1.4 Installatie Live server</h3>
@@ -521,7 +521,7 @@
     <span class="var">$trueButton</span>.<span class="attr">style</span>.<span class="attr">display</span> = <span class="string">"none"</span>;
     <span class="var">$falseButton</span>.<span class="attr">style</span>.<span class="attr">display</span> = <span class="string">"none"</span>;
     <span class="var">$questionDisplay</span>.<span class="attr">innerHTML</span> = <span class="string">`Speler ${<span class="var">playerId</span>} wint het spel!`</span>;
-    <span class="var">$playerTurnDisplay</span>.<span class="attr">innerHTML</span> = <span class="string">"&lt;a class='quiz__link' href='/game.html'&gt;Speel nog eens&lt;/a&gt;"</span>;
+    <span class="var">$playerTurnDisplay</span>.<span class="attr">innerHTML</span> = <span class="string">"&lt;a class='quiz__link' href='/'&gt;Speel nog eens&lt;/a&gt;"</span>;
 }
 </code></pre>
 
